--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,25 @@
-# Node modules
-node_modules/
+# Node backend
+backend/node_modules/
+backend/.env
 
-# Environment variables
-.env
+# Flutter
+mobile_app/build/
+mobile_app/.dart_tool/
+mobile_app/.packages
+mobile_app/.flutter-plugins
+mobile_app/.flutter-plugins-dependencies
 
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# React admin panel
+admin_dashboard/node_modules/
+admin_dashboard/.env
 
 # OS files
 .DS_Store
+Thumbs.db
 
-# Build output
-dist/
-build/
+# Logs
+*.log
+
+# IDE files
+.vscode/
+.idea/
